--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "part-1",
   "version": "1.0.0",
   "description": "",
-  "main": "application.ts",
+  "main": "day-1/part-1/application.ts",
   "scripts": {
-    "execute": "ts-node application.ts"
+    "execute 1-1": "ts-node day-1/part-1/application.ts",
+    "execute 1-2": "ts-node day-1/part-2/application.ts"
   },
   "author": "",
   "license": "ISC",
