--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "day-1/part-1/application.ts",
   "scripts": {
     "execute 1-1": "ts-node day-1/part-1/application.ts",
-    "execute 1-2": "ts-node day-1/part-2/application.ts"
+    "execute 1-2": "ts-node day-1/part-2/application.ts",
+    "execute 2-1": "ts-node day-2/part-1/application.ts",
+    "execute 2-2": "ts-node day-2/part-2/application.ts"
   },
   "author": "",
   "license": "ISC",
