Added day 3 - part 1 solution Part 2 is almost done... I hope

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "execute 1-1": "ts-node day-1/part-1/application.ts",
     "execute 1-2": "ts-node day-1/part-2/application.ts",
+    "execute 2-2": "ts-node day-2/part-2/application.ts",
     "execute 2-1": "ts-node day-2/part-1/application.ts",
-    "execute 2-2": "ts-node day-2/part-2/application.ts"
+    "execute 3-1": "ts-node day-3/part-1/application.ts",
+    "execute 3-2": "ts-node day-3/part-2/application.ts"
   },
   "author": "",
   "license": "ISC",
